tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier3HV-AAAAAAAAAAAAAAAAAAAABQ==__PhosphorusDopedM-AAAAAAAAAAAAAAAAAAAE1Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1237,
  "prerequisites": [
    160,
    1788,
    78
  ],
  "properties": {
    "auto_claim": false,
    "desc": "To make more advanced wafers, you need to make phosphorus doped monocrystalline silicon first. The process takes a while, so make sure you have stable power.\n\nYou can also get more wafers, and thus more chips out of higher tier boules. You still need to make the lower tier ones sometimes though.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lPhosphorus Doped Monocrystalline Silicon",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    160,
    1788,
    78
  ],
  "rewards": [],
  "tasks": []
}
