tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier3HV-AAAAAAAAAAAAAAAAAAAABQ==__PhosphorusDopedW-AAAAAAAAAAAAAAAAAAAE1g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1238,
  "prerequisites": [
    1237,
    940
  ],
  "properties": {
    "auto_claim": false,
    "desc": "To create some phosphorus doped silicon wafers, cut them in a cutting machine. An HV version of the cutting machine is needed for future wafers and chips.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lPhosphorus Doped Wafer",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1237,
    940
  ],
  "rewards": [],
  "tasks": []
}
