tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier3HV-AAAAAAAAAAAAAAAAAAAABQ==__Polystyrene-AAAAAAAAAAAAAAAAAAAKBQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2565,
  "prerequisites": [
    1620
  ],
  "properties": {
    "auto_claim": false,
    "desc": "To make Polystyrene use the chemical reactor to combine oxygen and styrene.\n\n[note]There's only one type of machine that uses it, so don't bother making more until you need it.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lPolystyrene",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "CHAIN"
  },
  "required_prerequisites": [
    1620
  ],
  "rewards": [],
  "tasks": []
}
