tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier3HV-AAAAAAAAAAAAAAAAAAAABQ==__RFSolarPanel-AAAAAAAAAAAAAAAAAAAD6A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1000,
  "prerequisites": [
    933,
    989
  ],
  "properties": {
    "auto_claim": false,
    "desc": "It's possible to power RF machines with a solar panel. It outputs 10 RF/t. Perfect for low use RF machines.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lRF Solar Panel",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    933,
    989
  ],
  "rewards": [],
  "tasks": []
}
